# ml_devops_nd

./: .gitignore  README.md
.github/workflows/: python-app.yml
project_1/: README.md  churn_library.py  churn_library_solution.py  churn_notebook.ipynb  churn_script_logging_and_tests.py  pyproject.toml
project_2/: pyproject.toml
project_2/lesson_2/ex_1/: upload_artifact.py  use_artifact.py
project_2/lesson_2/ex_1/solution/: upload_artifact.py  use_artifact.py
project_2/lesson_2/ex_2/: download_data.py
project_2/lesson_2/ex_2/solution/: download_data.py
project_2/lesson_2/ex_3/: main.py
project_2/lesson_2/ex_3/download_data/: download_data.py
project_2/lesson_2/ex_3/process_data/: run.py
project_2/lesson_2/ex_3/solution/: main.py
project_2/lesson_2/ex_3/solution/download_data/: download_data.py
project_2/lesson_2/ex_3/solution/process_data/: conda.yml  run.py
project_2/lesson_2/exercises/ex_1/solution/: upload_artifact.py
project_2/lesson_2/exercises/ex_3/solution/: conda.yml
project_2/lesson_2/exercises/ex_3/solution/process_data/: conda.yml
project_2/lesson_3/ex_4/: README.md
project_2/lesson_3/ex_4/solution/: conda.yml
project_2/lesson_3/ex_5/: README.md  run.py
project_2/lesson_3/ex_5/solution/: run.py
project_2/lesson_3/ex_6/: conda.yml
project_2/lesson_3/ex_6/solution/: run.py
project_2/lesson_4/ex_7/: conda.yml
project_2/lesson_4/ex_7/solution/: test_data.py
project_2/lesson_4/ex_8/solution/: test_data.py
project_2/lesson_4/ex_9/solution/: conda.yml  conftest.py  test_data.py
project_2/lesson_5/ex_10/solution/: conda.yml
project_2/lesson_5/ex_10/solution/random_forest/: conda.yml  run.py
project_2/lesson_5/ex_11/solution/: conda.yml
project_2/lesson_5/ex_11/solution/random_forest/: conda.yml
project_2/lesson_5/ex_12/solution/: conda.yml  config.yaml
project_2/lesson_5/ex_12/solution/random_forest/: conda.yml  run.py
project_2/lesson_5/ex_13/solution/: conda.yml  run.py
project_2/lesson_6/ex_14/solution/: config.yaml  main.py
project_2/lesson_6/ex_14/solution/preprocess/: conda.yml
project_2/lesson_6/ex_16/solution/: solution.ipynb
project_2/project_solution/: README.md  conda.yml  config.yaml  environment.yml  main.py
project_2/project_solution/src/basic_cleaning/: conda.yml  run.py
project_2/project_solution/src/data_check/: conda.yml  test_data.py
project_2/project_solution/src/eda/: conda.yml
project_2/project_solution/src/get_data/: conda.yml  run.py
project_2/project_solution/src/test_regression_model/: conda.yml
project_2/project_solution/src/train_random_forest/: conda.yml  run.py
project_2/project_solution/src/train_val_test_split/: conda.yml
project_3/: pyproject.toml
project_3/.github/workflows/: python-app.yml
project_3/project_solution/src/: data.py  model.py
