[tool.poetry]
name = "project_1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
scikit-learn = "^1.0.2"
jupyterlab = "^3.2.5"
seaborn = "^0.11.2"
pylint = "^2.12.2"
autopep8 = "^1.6.0"
ipython = "^7.30.1"
shap = "^0.40.0"
isort = "^5.10.1"
black = "^21.12b0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "CRITICAL"
log_cli_format = "%(message)s"

log_file = "./logs/test_churn_library.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_file_date_format = "%Y-%m-%d %H:%M:%S"