[tool.poetry]
name = "project_2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "1.22.0"
wandb = "^0.12.9"
hydra-core = "^1.1.1"
requests = "2.24.0"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
pandas-profiling = "^3.1.0"
pyarrow = "^6.0.1"
ipywidgets = "^7.6.5"
pytest = "^6.2.5"
flake8 = "^4.0.1"
plotly = "^5.5.0"
hydra-joblib-launcher = "^1.1.5"
jupyterlab = "^3.2.8"
pip = "^22.0.3"
cookiecutter = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
