[tool.poetry]
name = "project_3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
scikit-learn = "^1.1.1"
numpy = "^1.22.4"
pytest = "^7.1.2"
jupyter = "^1.0.0"
jupyterlab = "^3.4.3"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
black = "^22.3.0"
flake8 = "^4.0.1"
dvc = "^2.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
